parser/tests/Copy.test
#   Copyright 2011-2015 Quickstep Technologies LLC.
#   Copyright 2015 Pivotal Software, Inc.
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

copy test from 'test.txt' with ()
--
ERROR: syntax error (1 : 33)
copy test from 'test.txt' with ()
                                ^
==

copy test from 'test.txt'
--
CopyFromStatement[relation_name=test,source_file=test.txt]
==

copy test from 'test.txt' with (delimiter 'd', escape_strings false)
--
CopyFromStatement[relation_name=test,source_file=test.txt]
+-params=CopyFromParams[delimiter=d,escape_string=false]
==

copy test from 'test.txt' with (delimiter '123', escape_strings false)
--
CopyFromStatement[relation_name=test,source_file=test.txt]
+-params=CopyFromParams[delimiter=123,escape_string=false]
==

copy test from 'test.txt' with (delimiter e'\t')
--
CopyFromStatement[relation_name=test,source_file=test.txt]
+-params=CopyFromParams[delimiter=	,escape_string=true]
==

copy test from 'test.txt' with (escape_strings false, delimiter 'd')
--
CopyFromStatement[relation_name=test,source_file=test.txt]
+-params=CopyFromParams[delimiter=d,escape_string=false]
==

copy test from 'test.txt' with (delimiter '1', escape_strings false, delimiter '2', escape_strings true)
--
CopyFromStatement[relation_name=test,source_file=test.txt]
+-params=CopyFromParams[delimiter=2,escape_string=true]
